# seren-acp-codex

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/acp/: mod.rs  server.rs
src/codex/: client.rs  mod.rs  types.rs
